# PeerlearnProject

./: .env  .gitignore  .replit  ANANDU_ML_ENGINEER_CV_ATS.md  ANANDU_ML_INTERVIEW_PREP.md  BUSINESS_ANALYSIS.md  COMPLETE_PROJECT_REQUIREMENTS.txt  DATABASE_DESIGN_ERD.txt  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DFD_ALL_LEVELS.txt  Dockerfile  ENV_TEMPLATE.txt  MASTER_PROJECT_GUIDE.md  ML_ENGINEER_INTERVIEW_PREP_PLAN.md  ML_ENGINEER_SHOWCASE_GUIDE.md  PEERLEARN_ACADEMIC_PROJECT_REPORT.md  PEERLEARN_COMPLETE_PROJECT_DOCUMENTATION.md  PROJECT_ACHIEVEMENTS_SUMMARY.md  PROJECT_DOCUMENTATION.txt  PROJECT_FULL_DESCRIPTION.txt  PROJECT_REQUIREMENTS.txt  README.md  REQUIREMENTS_COMPLETE.txt  SENDGRID_SETUP_GUIDE.md  SYSTEM_ARCHITECTURE.txt  SendGrid_Setup_Instructions.md  TECHNICAL_ARCHITECTURE_DOCUMENTATION.txt  UML_CLASS_DIAGRAMS.txt  UNIVERSITY_DFD_DETAILED_SHAPES.txt  UNIVERSITY_DFD_DIAGRAMS.txt  UNIVERSITY_ERD_DATABASE_DESIGN.txt  UNIVERSITY_UML_CLASS_DIAGRAMS.txt  db.sqlite3  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  render.yaml  (+2 more)
attached_assets/: Pasted--Notifications-Overview-Keep-mentors-informed-with-real-time-alerts-UI-Elements--1748192233999.txt  Pasted--at-Alpine-analytics-profileViews-eval-at-anonymous-cdn-min-js-5-665-anonymous-3-32--1748354274721.txt  Pasted--at-Alpine-form-description-eval-at-anonymous-cdn-min-js-5-665-anonymous-3-32-at-cdn--1748106789136.txt  Pasted--at-N-cdn-min-js-1-398-at-cdn-min-js-1-511-at-Function-anonymous-cdn-min-js-5-35399--1748107298499.txt  (+36 more)
peerlearn/: asgi.py  routing.py  settings.py  (+2 more)
(+161 files in other folders)
